Tunning para deteccao do problema de 03/12, melhores configuracoes encontradas ate o momento

--- a/docker-graphite_graphana/logstash/config/logstash.conf
+++ b/docker-graphite_graphana/logstash/config/logstash.conf
@@ -61,7 +61,9 @@ output {
 				"accesslog.%{endpointResponseCode}.currentSd", "%{currentSd}",
 				"accesslog.%{endpointResponseCode}.historicalSd", "%{historicalSd}",
 				"accesslog.%{endpointResponseCode}.value", "%{value}",
-				"accesslog.%{endpointResponseCode}.alarm", "%{alarm}"]
+				"accesslog.%{endpointResponseCode}.alarm", "%{alarm}",
+				"accesslog.%{endpointResponseCode}.scoreStatistic", "%{scoreStatistic}"
+				]
 		timestamp_field => "unixTimestamp"
 	}
 }
